# nymeria_ardrone

./: CMakeLists.txt  README.md  clientUDP.cpp  config_doxy  mainpage.dox  package.xml
Documentation/html/: Controller_8h_source.html  NymeriaCheckObstacle_8h_source.html  NymeriaConstants_8h_source.html  NymeriaExceptions_8h_source.html  NymeriaInvalidSecurityDistance_8h_source.html  NymeriaMutexCommand_8h_source.html  NymeriaMutexObstacle_8h_source.html  NymeriaMutexSecurityDistance_8h_source.html  NymeriaMutex_8h_source.html  NymeriaParamExc_8h_source.html  Nymeria_8cpp.html  Nymeria_8h_source.html  SensorInterface_8h_source.html  TeleopKeyboard_8h_source.html  UDPWrapper_8h_source.html  _controller_8cpp.html  _controller_8h.html  _controller_8h_source.html  _drone_u_d_p_server_8cpp.html  _nymeria_8cpp.html  _nymeria_check_obstacle_8cpp.html  _nymeria_check_obstacle_8h.html  _nymeria_constants_8cpp.html  _nymeria_constants_8h_source.html  _nymeria_exceptions_8cpp.html  _nymeria_exceptions_8h_source.html  _nymeria_invalid_security_distance_8cpp.html  _nymeria_invalid_security_distance_8h_source.html  _nymeria_mutex_8cpp.html  _nymeria_mutex_command_8h.html  _nymeria_mutex_obstacle_8cpp.html  _nymeria_mutex_security_distance_8cpp.html  _nymeria_param_exc_8cpp.html  _r_e_a_d_m_e_8md.html  _sensor_interface_8h_source.html  annotated.html  (+71 more)
arduino/: codeArduino.ino  old_codeArduino.ino
communication/: udp_wrapper.cpp
embedded/: DroneUDPServer.cpp  DroneUDPServer.elf  DroneUDPServer_v2.elf  UDPWrapper.cpp  testDroneUDPServer.cpp
include/: ._obstacle1
launch/: nymeria_ardrone.launch  nymeria_ardrone_test.launch
script/: ._ardrone_teleop_keyboard.py  ardrone_teleop_keyboard.py  safeActions  teleop_twist_keyboard.py
src/: ._commande.cpp  ._commande.h  Command.cpp  Controller.cpp  DroneUDPServer.cpp  Nymeria.cpp  Nymeria.h  NymeriaCheckObstacle.cpp  NymeriaConstants.cpp  NymeriaConstants.h  NymeriaMutex.cpp  NymeriaMutexCommand.cpp  NymeriaMutexDrone.cpp  NymeriaMutexObstacle.cpp  NymeriaMutexSecurityDistance.cpp  Nymeria_Constants.cpp  Polling.cpp  SensorInterface.cpp  SyncSensorInterface.cpp  TeleopKeyboard.cpp  UDPWrapper.cpp  ardrone_teleop_keyboard_test.cpp  commande.cpp  nymeria_core.cpp  polling.cpp  teleop_keyboard.cpp
test/: DroneUDPServer.cpp  TestSyncSensorInterface.cpp  UDPWrapper.cpp  USB.cpp  clientUDP.cpp  commande.cpp  commande.h  functionnal_tests.cpp  test.txt
(+223 files in other folders)
